networkpolicy/networkpolicy__basic_kafka_setup__strimzi__all__strimzi__ingress__ports__strimzi__nr52__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strimzi--all--strimzi--ingress--ports--strimzi--nr52
  namespace: strimzi
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: strimzi
